# holocal

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Makefile  README-en.md  README.md  conf.py  index.rst  manifest.scm  marks.csv  pyproject.toml  run.py
.github/workflows/: doc.yml  package.yml  pages.yml  update-ics.yml
holocal/: __init__.py  __main__.py  event.py  parser.py  schedule.py  site.py
holodule/: __init__.py  errors.py  event.py  holodule.py  parser.py  schedule.py  site.py
locale/en/LC_MESSAGES/: CHANGELOG.po  CONTRIBUTING.po  README-en.po  README.po  index.po  license.po
tmp/: test.md
translation/: Makefile  po4a.cfg
translation/po/: en.po  ja.pot
